changed sh to single line

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,7 @@ pipeline {
 	stages {
 		stage('Sample') {
 			steps {
-				sh ```
-					aws --version
-				```
+				sh "aws --version"
 			}
 		}
 	}
