--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,8 +3,9 @@ pipeline {
 	stages {
 		stage('Sample') {
 			steps {
+				cleanWs()
 				sh "aws --version"
-				git 'https://github.com/TCS-Intern-Team-Yellow/login'
+				sh "git clone https://github.com/TCS-Intern-Team-Yellow/login"
 			}
 		}
 	}
