--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,14 @@
 pipeline {
 	agent any
 	stages {
+		environment{
+			TCS_YELLOW_PEM_KEY = credentials('ec2-user (shopper-frontend)')
+		}
 		stage('Sample') {
 			steps {
 				cleanWs()
-				sh "aws --version"
-				sh "git clone https://github.com/TCS-Intern-Team-Yellow/login"
+				sh 'ssh -i $TCS_YELLOW_PEM_KEY ec2-user@44.204.88.251'
+				sh 'mddir test1234'		
 			}
 		}
 	}
