--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
 		stage('Sample') {
 			steps {
 				cleanWs()
-				sh 'ssh -i $TCS_YELLOW_PEM_KEY ec2-user@44.204.88.251'
-				sh 'mddir test1234'		 
+				sh 'ssh -i "TCS_YELLOW_TEAM.pem" ec2-user@44.204.88.251'
+				sh 'mkdir test1234'		 
 			}
 		}
 	}
