--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,9 +2,12 @@ pipeline {
 	agent any
 	stages {
 		stage('Sample') {
+			environment {
+                PEM_KEY = credentials('ec2-user')
+            }
 			steps {
 				cleanWs()
-				sh 'ssh -i "TCS_YELLOW_TEAM.pem" ec2-user@44.204.88.251'
+				sh 'ssh -i $PEM_KEY ec2-user@44.204.88.251'
 				sh 'mkdir test1234'		 
 			}
 		}
