--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,11 +3,11 @@ pipeline {
 	stages {
 		stage('Sample') {
 			environment {
-                PEM_KEY = credentials('ec2-user')
+                PEM_KEY = credentials('10.0.156.103')
             }
 			steps {
 				cleanWs()
-				sh 'ssh -i $PEM_KEY ec2-user@44.204.88.251'
+				sh 'ssh a-i $PEM_KEY ec2-user@44.204.88.251'
 				sh 'mkdir test1234'		 
 			}
 		}
