--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,10 @@ pipeline {
             }
 			steps {
 				cleanWs()
+                passVar = $PEM_KEY
+                sh 'echo "Password: ${passVar}"'
 				sh 'ssh -tt -i $PEM_KEY ec2-user@10.0.143.117'
-				sh 'mkdir test1234'		 
+				sh 'mkdir test1234'		
 			}
 		}
 	}
