--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,10 @@ pipeline {
 	stages {
 		stage('Sample') {
 			environment {
-                PEM_KEY = credentials('10.0.156.103')
+                PEM_KEY = credentials('TCS_YELLOW_TEAM_PEM')
             }
 			steps {
 				cleanWs()
-                sh 'passVar = $PEM_KEY'
-                sh 'echo "Password: ${passVar}"'
 				sh 'ssh -tt -i $PEM_KEY ec2-user@10.0.143.117'
 				sh 'mkdir test1234'		
 			}
