--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
             }
 			steps {
 				cleanWs()
-				sh 'ssh -tty -i $PEM_KEY ec2-user@10.0.143.117 'echo "connected"''
+				sh 'ssh -tty -i $PEM_KEY ec2-user@10.0.143.117'
 			}
 		}
 	}
