--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,11 @@ pipeline {
 	agent any
 	stages {
 		stage('Sample') {
+			environment {
+				PEM_KEY = credentials('TCS_YELLOW_TEAM_PEM')
+            }
 			steps {
-				sshagent (credentials: ['10.0.156.103']) {
-					sh 'ssh -o StrictHostKeyChecking=no -l yellow 10.0.143.117 uname -a'
-				}
+				sh 'ssh --tty -v -i $TCS_YELLOW_TEAM_PEM ec2-user@10.0.143.117'
 			}
 		}
 	}
