--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,11 +2,10 @@ pipeline {
 	agent any
 	stages {
 		stage('Sample') {
-			environment {
-				PEM_KEY = credentials('TCS_YELLOW_TEAM_PEM')
-            }
 			steps {
-				sh 'ssh -tty -v -i $PEM_KEY ec2-user@10.0.156.103'
+				sshagent(['10.0.156.103']) {
+					sh 'ssh -v ec2-user@10.0.156.103'
+				}
 			}
 		}
 	}
