--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
 		stage('Sample') {
 			steps {
 				sshagent(['10.0.156.103']) {
-					sh 'ssh -v ec2-user@10.0.156.103'
+					sh 'ssh -o StrictHostKeyChecking=no ec2-user@10.0.156.103'
 				}
 			}
 		}
