--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
 			steps {
 				sshagent(['10.0.156.103']) {
 					sh 'ssh -o StrictHostKeyChecking=no ec2-user@10.0.156.103'
-					sh 'echo "Hello from Frontend"'
+					sh 'mkdir test1234'
 				}
 			}
 		}
